manifests/apps/gearpit-core/overlays/local-dev/patch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gearpit-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          imagePullPolicy: IfNotPresent
