manifests/apps/gearpit-core/overlays/local-dev/service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: gearpit-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: gearpit-db
